// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding empty workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: my-workflow
on: {}
jobs: {}
"
`;

exports[`setting runName 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: run-name
run-name: This is a custom run-name
on: {}
jobs: {}
"
`;
